Fix firefox scrollbar glitch

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,4 +8,8 @@
     -webkit-appearance: none;
     margin: 0;
   }
+
+  html {
+    scrollbar-width: none;
+  }
 }
